updated ramses and team

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve column ramses-avatar-container">
-          <img src="images/ramses-avatar2.jpg" class="ramses-avatar"/>
+          <img src="images/ramses-avatar.jpg" class="ramses-avatar"/>
           <h1 class="hero-heading">Ramses</h1>
           <h4>APIs for immortals</h4>
           <iframe class="github" src="https://ghbtns.com/github-btn.html?user=brandicted&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
@@ -151,9 +151,9 @@ $ curl http://localhost/api/monuments
       <p class="section-description">We are currently seven and always looking for more contributors.</p>
       <div class="row">
         <div class="four columns team">
-          <img src="images/team-jonathan.jpg" width="200" />
-          <h5>Jonathan Stoikovitch</h5>
-          <p>Montreal, Canada</p>
+          <img src="images/team-mat.jpg" width="200" />
+          <h5>Mat Allen</h5>
+          <p>Vancouver, Canada</p>
         </div>
         <div class="four columns team">
           <img src="images/team-chris.jpg" width="200" />
@@ -161,19 +161,19 @@ $ curl http://localhost/api/monuments
           <p>Montreal, Canada</p>
         </div>
         <div class="four columns team">
+          <img src="images/team-artem.jpg" width="200" />
+          <h5>Artem Kostiuk</h5>
+          <p>Bila Tserkva, Ukraine</p>
+        </div>
+        <div class="four columns team">
           <img src="images/team-amos.jpg" width="200" />
           <h5>Amos Latteier</h5>
           <p>Vancouver, Canada</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-mat.jpg" width="200" />
-          <h5>Mat Allen</h5>
-          <p>Vancouver, Canada</p>
-        </div>
-        <div class="four columns team">
-          <img src="images/team-artem.jpg" width="200" />
-          <h5>Artem Kostiuk</h5>
-          <p>Bila Tserkva, Ukraine</p>
+          <img src="images/team-jan.png" width="200" />
+          <h5>Jan Mesarič</h5>
+          <p>Ljubljana, Slovenia</p>
         </div>
         <div class="four columns team">
           <img src="images/team-jasa.png" width="200" />
@@ -181,9 +181,9 @@ $ curl http://localhost/api/monuments
           <p>Ljubljana, Slovenia</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-jan.png" width="200" />
-          <h5>Jan Mesarič</h5>
-          <p>Ljubljana, Slovenia</p>
+          <img src="images/team-jonathan.jpg" width="200" />
+          <h5>Jonathan Stoikovitch</h5>
+          <p>Montreal, Canada</p>
         </div>
         <div class="four columns team">
           <a href="https://gitter.im/brandicted/ramses"><img src="images/team-new.jpg" width="200" /></a>
