changing email address for contact

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ $ curl http://localhost/api/monuments
     <div class="container">
       <h2 class="section-heading"><strong>Need help getting started?</strong></h3>
       <h4 class="section-description">If you'd like a bit of guidance you can <a href="https://gitter.im/brandicted/ramses">chat with us on Gitter</a>, or <em>send an email to get private support</em>.</h4>
-      <a class="button button-primary" href="mailto:chris+ramses@brandicted.com">get in touch</a>
+      <a class="button button-primary" href="mailto:hello@ramses.tech">get in touch</a>
     </div>
   </div>
 
@@ -209,7 +209,7 @@ $ curl http://localhost/api/monuments
   </div>
       <div class="row">
           <div class="four columns offset-by-four">
-            <a class="button button-primary" href="mailto:chris+ramses@brandicted.com">get in touch</a>
+            <a class="button button-primary" href="mailto:hello@ramses.tech">get in touch</a>
           </div>
       </div>
   </div>
@@ -217,7 +217,7 @@ $ curl http://localhost/api/monuments
 
 
 <div class="row footer">
-  <p>&nbsp; &copy; Sosign Interactive</p>
+  <p>&nbsp; &copy; Sosign Interactive Inc.</p>
 </div>
 
 <!-- End Document
