--- a/index.html
+++ b/index.html
@@ -148,40 +148,40 @@ $ curl http://localhost/api/monuments
   <div class="section get-help team">
     <div class="container">
       <h2 class="section-heading">Core Dev Team</h2>
-      <p class="section-description">We are currently seven and always looking for more contributors.</p>
+      <p class="section-description">We are seven so far and looking for more contributors.</p>
       <div class="row">
         <div class="four columns team">
-          <img src="images/team-mat.jpg" width="200" />
+          <img src="https://avatars.githubusercontent.com/u/224078?v=3&s=400" width="200" />
           <h5>Mat Allen</h5>
           <p>Vancouver, Canada</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-chris.jpg" width="200" />
+          <img src="https://avatars.githubusercontent.com/u/461274?v=3&s=400" width="200" />
           <h5>Chris Hart</h5>
           <p>Montreal, Canada</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-artem.jpg" width="200" />
+          <img src="https://avatars.githubusercontent.com/u/1999863?v=3&s=400" width="200" />
           <h5>Artem Kostiuk</h5>
           <p>Bila Tserkva, Ukraine</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-amos.jpg" width="200" />
+          <img src="https://avatars.githubusercontent.com/u/312702?v=3&s=400" width="200" />
           <h5>Amos Latteier</h5>
           <p>Vancouver, Canada</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-jan.png" width="200" />
+          <img src="https://avatars.githubusercontent.com/u/4790112?v=3&s=400" width="200" />
           <h5>Jan Mesarič</h5>
           <p>Ljubljana, Slovenia</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-jasa.png" width="200" />
+          <img src="https://avatars.githubusercontent.com/u/3224533?v=3&s=400" width="200" />
           <h5>Jaša Niklanovič</h5>
           <p>Ljubljana, Slovenia</p>
         </div>
         <div class="four columns team">
-          <img src="images/team-jonathan.jpg" width="200" />
+          <img src="https://avatars.githubusercontent.com/u/9660342?v=3&s=400" width="200" />
           <h5>Jonathan Stoikovitch</h5>
           <p>Montreal, Canada</p>
         </div>
