tiniest semantic thing

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ $ curl http://localhost/api/monuments
         <div class="four columns team">
           <a href="https://gitter.im/brandicted/ramses"><img src="images/team-new.jpg" width="200" /></a>
           <h5>Next member?</h5>
-          <p>Anywhere, Earth</p>
+          <p>Anywhere, Universe</p>
         </div>
       </div>
     </div>
