--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/stars.css">
   <link rel="stylesheet" href="css/custom.css">
 
 
@@ -48,7 +47,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve column ramses-avatar-container">
-          <img src="images/ramses-avatar.jpg" class="ramses-avatar"/>
+          <img src="images/ramses-avatar.jpg" class="ramses-avatar" width="500">
           <h1 class="hero-heading">Ramses</h1>
           <h4>APIs for immortals</h4>
           <iframe class="github" src="https://ghbtns.com/github-btn.html?user=brandicted&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
