small aesthetic fix under 'Fine-grained security'

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
           <h1 class="hero-heading">Ramses</h1>
           <h4>APIs for immortals</h4>
           <iframe class="github" src="https://ghbtns.com/github-btn.html?user=brandicted&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-        </div></div>
-        <div class="row">
+        </div>
+      </div>
+      <div class="row">
         <div class="ten columns offset-by-one hero-heading-container">
           <h5>Step 1, describe an API:</h5>
           <pre><code class="hero-code">
@@ -48,8 +49,9 @@
             }
           }
           </code></pre>
-        </div></div>
-        <div class="row">
+        </div>
+      </div>
+      <div class="row">
         <div class="ten columns offset-by-one hero-heading-container">
           <h5>Step 2, use it:</h5>
           <pre><code class="hero-code">
@@ -60,115 +62,116 @@ $ curl http://localhost/api/monuments
   "dynasty": 19
 }]}
           </code></pre>
-        </div></div>
-        <div class="row">
-          <div class="four columns offset-by-four">
-            <a class="button button-primary" href="https://ramses.readthedocs.org/en/stable/getting_started.html">Get started</a>
-          </div>
         </div>
+      </div>
+      <div class="row">
+        <div class="four columns offset-by-four">
+          <a class="button button-primary" href="https://ramses.readthedocs.org/en/stable/getting_started.html">Get started</a>
+        </div>
+      </div>
     </div>
 </div>
 
-  <div class="section advantages">
-    <div class="container">
-      <div class="row">
-        <div class="one-third column value">
-          <img src="images/icon-rapid.gif" width="180" />
-          <h3 class="value-name">Rapid API creation</h2>
-          <h5 class="value-heading">One text file to rule them all</h5>
-          <p class="value-description">Using <a href="http://raml.org/">RAML</a>, Ramses generates production-ready APIs. No code required. Generate frontend code, documentation and tests.</p>
-        </div>
-        <div class="one-third column value">
-          <img src="images/logo-elastic.png" width="180" />
-          <h3 class="value-name">Elasticsearch-powered</h2>
-          <h5 class="value-heading">Advanced querying</h5>
-          <p class="value-description"><a href="https://www.elastic.co/products/elasticsearch">Elasticsearch</a> query DSL for your endpoints. Aggregations, full-text search, ranges, sorting, limits, pagination and more.</p>
-        </div>
-        <div class="one-third column value">
-          <img src="images/icon-security.jpg" width="180" />
-          <h3 class="value-name">Fine-grained security</h2>
-          <h5 class="value-heading">Single Source of Truth &amp; full access control</h5>
-          <p class="value-description">Syncs with Postgres or Mongo to ensure data safety. Mutiple authentication schemes. Collection and object-level authorization.</p>
-        </div>
+<div class="section advantages">
+  <div class="container">
+    <div class="row">
+      <div class="one-third column value">
+        <img src="images/icon-rapid.gif" width="180">
+        <h3 class="value-name">Rapid API creation</h3>
+        <h5 class="value-heading">One text file to rule them all</h5>
+        <p class="value-description">Using <a href="http://raml.org/">RAML</a>, Ramses generates production-ready APIs. No code required. Generate frontend code, documentation and tests.</p>
+      </div>
+      <div class="one-third column value">
+        <img src="images/logo-elastic.png" width="180">
+        <h3 class="value-name">Elasticsearch-powered</h3>
+        <h5 class="value-heading">Advanced querying</h5>
+        <p class="value-description"><a href="https://www.elastic.co/products/elasticsearch">Elasticsearch</a> query DSL for your endpoints. Aggregations, full-text search, ranges, sorting, limits, pagination and more.</p>
+      </div>
+      <div class="one-third column value">
+        <img src="images/icon-security.jpg" width="180">
+        <h3 class="value-name">Fine-grained security</h3>
+        <h5 class="value-heading">Customizable authorization</h5>
+        <p class="value-description">Syncs with Postgres or Mongo as a single source of truth to ensure data safety. Mutiple authentication schemes. Collection and object-level authorization.</p>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="section get-help">
-    <div class="container">
-      <h2 class="section-heading"><strong>Need help getting started?</strong></h3>
-      <h4 class="section-description">If you'd like a bit of guidance you can <a href="https://gitter.im/brandicted/ramses">chat with us on Gitter</a>, or <em>send an email to get private support</em>.</h4>
-      <a class="button button-primary" href="mailto:hello@ramses.tech">get in touch</a>
-    </div>
+<div class="section get-help">
+  <div class="container">
+    <h2 class="section-heading"><strong>Need help getting started?</strong></h2>
+    <h4 class="section-description">If you'd like a bit of guidance you can <a href="https://gitter.im/brandicted/ramses">chat with us on Gitter</a>, or <em>send an email to get private support</em>.</h4>
+    <a class="button button-primary" href="mailto:hello@ramses.tech">get in touch</a>
   </div>
+</div>
 
-  <div class="section advantages">
-    <div class="container">
-      <h2 class="section-heading">Self-hosted</h2>
-      <p class="section-description">Don't outsource the bread and butter of your product to third-party backends that aren't under your control.</p>
-      <div class="row">
-        <div class="one-half column advantge">
-          <img src="images/icon-opensource.jpg" width="200"/>
-          <h3>Open source</h3>
-          <p>It's Python all the way down. Dive into the internals if you want. The code is documented, unit tested, and commented. Licensed under Apache 2.0.</p>
-        </div>
-        <div class="one-half column advantge">
-          <img src="images/icon-extensible.png" height="135" style="border-radius:0;" />
-          <h3>Extensible</h3>
-          <p>Add custom validators on fields, or business logic with CRUD hooks. Easily add databases or interact with other microservices.</p>
-        </div>
+<div class="section advantages">
+  <div class="container">
+    <h2 class="section-heading">Self-hosted</h2>
+    <p class="section-description">Don't outsource the bread and butter of your product to third-party backends that aren't under your control.</p>
+    <div class="row">
+      <div class="one-half column advantge">
+        <img src="images/icon-opensource.jpg" width="200"/>
+        <h3>Open source</h3>
+        <p>It's Python all the way down. Dive into the internals if you want. The code is documented, unit tested, and commented. Licensed under Apache 2.0.</p>
+      </div>
+      <div class="one-half column advantge">
+        <img src="images/icon-extensible.png" height="135" style="border-radius:0;">
+        <h3>Extensible</h3>
+        <p>Add custom validators on fields, or business logic with CRUD hooks. Easily add databases or interact with other microservices.</p>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="section get-help team">
-    <div class="container">
-      <h2 class="section-heading">Core Dev Team</h2>
-      <p class="section-description">We are seven so far and looking for more contributors.</p>
-      <div class="row">
-        <div class="four columns team">
-          <img src="https://avatars.githubusercontent.com/u/224078?v=3&s=400" width="200" />
-          <h5>Mat Allen</h5>
-          <p>Vancouver, Canada</p>
-        </div>
-        <div class="four columns team">
-          <img src="https://avatars.githubusercontent.com/u/461274?v=3&s=400" width="200" />
-          <h5>Chris Hart</h5>
-          <p>Montreal, Canada</p>
-        </div>
-        <div class="four columns team">
-          <img src="https://avatars.githubusercontent.com/u/1999863?v=3&s=400" width="200" />
-          <h5>Artem Kostiuk</h5>
-          <p>Bila Tserkva, Ukraine</p>
-        </div>
-        <div class="four columns team">
-          <img src="https://avatars.githubusercontent.com/u/312702?v=3&s=400" width="200" />
-          <h5>Amos Latteier</h5>
-          <p>Vancouver, Canada</p>
-        </div>
-        <div class="four columns team">
-          <img src="https://avatars.githubusercontent.com/u/4790112?v=3&s=400" width="200" />
-          <h5>Jan Mesarič</h5>
-          <p>Ljubljana, Slovenia</p>
-        </div>
-        <div class="four columns team">
-          <img src="https://avatars.githubusercontent.com/u/3224533?v=3&s=400" width="200" />
-          <h5>Jaša Niklanovič</h5>
-          <p>Ljubljana, Slovenia</p>
-        </div>
-        <div class="four columns team">
-          <img src="https://avatars.githubusercontent.com/u/9660342?v=3&s=400" width="200" />
-          <h5>Jonathan Stoikovitch</h5>
-          <p>Montreal, Canada</p>
-        </div>
-        <div class="four columns team">
-          <a href="https://gitter.im/brandicted/ramses"><img src="images/team-new.jpg" width="200" /></a>
-          <h5>Next member?</h5>
-          <p>Anywhere, Universe</p>
-        </div>
+<div class="section get-help team">
+  <div class="container">
+    <h2 class="section-heading">Core Dev Team</h2>
+    <p class="section-description">We are seven so far and looking for more contributors.</p>
+    <div class="row">
+      <div class="four columns team">
+        <img src="https://avatars.githubusercontent.com/u/224078?v=3&s=400" width="200">
+        <h5>Mat Allen</h5>
+        <p>Vancouver, Canada</p>
+      </div>
+      <div class="four columns team">
+        <img src="https://avatars.githubusercontent.com/u/461274?v=3&s=400" width="200">
+        <h5>Chris Hart</h5>
+        <p>Montreal, Canada</p>
+      </div>
+      <div class="four columns team">
+        <img src="https://avatars.githubusercontent.com/u/1999863?v=3&s=400" width="200">
+        <h5>Artem Kostiuk</h5>
+        <p>Bila Tserkva, Ukraine</p>
+      </div>
+      <div class="four columns team">
+        <img src="https://avatars.githubusercontent.com/u/312702?v=3&s=400" width="200">
+        <h5>Amos Latteier</h5>
+        <p>Vancouver, Canada</p>
+      </div>
+      <div class="four columns team">
+        <img src="https://avatars.githubusercontent.com/u/4790112?v=3&s=400" width="200">
+        <h5>Jan Mesarič</h5>
+        <p>Ljubljana, Slovenia</p>
+      </div>
+      <div class="four columns team">
+        <img src="https://avatars.githubusercontent.com/u/3224533?v=3&s=400" width="200">
+        <h5>Jaša Niklanovič</h5>
+        <p>Ljubljana, Slovenia</p>
+      </div>
+      <div class="four columns team">
+        <img src="https://avatars.githubusercontent.com/u/9660342?v=3&s=400" width="200">
+        <h5>Jonathan Stoikovitch</h5>
+        <p>Montreal, Canada</p>
+      </div>
+      <div class="four columns team">
+        <a href="https://gitter.im/brandicted/ramses"><img src="images/team-new.jpg" width="200"></a>
+        <h5>Next member?</h5>
+        <p>Anywhere, Universe</p>
       </div>
     </div>
   </div>
+</div>
 
 
 <div class="section services">
