added short description

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
       <div class="row">
         <div class="ten columns offset-by-one hero-heading-container">
+          <h4>Turn a RAML file into a production-ready backend</h4>
           <h5>Step 1, describe an API:</h5>
           <pre><code class="hero-code">
 /monuments:
