index.html typo: Mutiple -> Multiple

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ $ curl http://localhost/api/monuments
         <img src="images/icon-security.jpg" width="180">
         <h2 class="value-name">Fine-grained security</h2>
         <h5 class="value-heading">Customizable authorization</h5>
-        <p class="value-description">Syncs with Postgres or Mongo as a single source of truth to ensure data safety. Mutiple authentication schemes. Collection and object-level authorization.</p>
+        <p class="value-description">Syncs with Postgres or Mongo as a single source of truth to ensure data safety. Multiple authentication schemes. Collection and object-level authorization.</p>
       </div>
     </div>
   </div>
