updating site with new github org

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img src="images/ramses-avatar.jpg" class="ramses-avatar" width="500">
           <h1 class="hero-heading">Ramses</h1>
           <h4>APIs for immortals</h4>
-          <iframe class="github" src="https://ghbtns.com/github-btn.html?user=brandicted&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+          <iframe class="github" src="https://ghbtns.com/github-btn.html?user=ramses-tech&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
         </div>
       </div>
       <div class="row">
@@ -101,7 +101,7 @@ $ curl http://localhost/api/monuments
 <div class="section get-help">
   <div class="container">
     <h2 class="section-heading"><strong>Need help getting started?</strong></h2>
-    <h4 class="section-description">If you'd like a bit of guidance you can <a href="https://gitter.im/brandicted/ramses">chat with us on Gitter</a>, or <em>send an email to get private support</em>.</h4>
+    <h4 class="section-description">If you'd like a bit of guidance you can <a href="https://gitter.im/ramses-tech/ramses">chat with us on Gitter</a>, or <em>send an email to get private support</em>.</h4>
     <a class="button button-primary" href="mailto:hello@ramses.tech">get in touch</a>
   </div>
 </div>
@@ -166,14 +166,13 @@ $ curl http://localhost/api/monuments
         <p>Montreal, Canada</p>
       </div>
       <div class="four columns team">
-        <a href="https://gitter.im/brandicted/ramses"><img src="images/team-new.jpg" width="200"></a>
+        <a href="https://gitter.im/ramses-tech/ramses"><img src="images/team-new.jpg" width="200"></a>
         <h5>Next member?</h5>
         <p>Anywhere, Universe</p>
       </div>
     </div>
   </div>
 </div>
-
 
 <div class="section services">
   <div class="container">
@@ -196,7 +195,6 @@ $ curl http://localhost/api/monuments
   </div>
 </div>
 
-
 <div class="section footer">
   <div class="container">
     <p>&nbsp; &copy; Sosign Interactive Inc.</p>
@@ -205,7 +203,7 @@ $ curl http://localhost/api/monuments
 
 <script>
   ((window.gitter = {}).chat = {}).options = {
-  room: 'brandicted/ramses'
+  room: 'ramses-tech/ramses'
   };
 </script>
 <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
