--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="twelve column ramses-avatar-container">
           <img src="images/ramses-avatar.jpg" class="ramses-avatar" width="500">
           <h1 class="hero-heading">Ramses</h1>
-          <h4>APIs for immortals</h4>
+          <h4>the API generator</h4>
           <iframe class="github" src="https://ghbtns.com/github-btn.html?user=ramses-tech&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
         </div>
       </div>
