--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve column ramses-avatar-container">
-          <img src="images/ramses-avatar.jpg" class="ramses-avatar" width="500">
+          <img src="images/ramses-avatar.jpg" class="ramses-avatar" width="300">
           <h1 class="hero-heading">Ramses</h1>
           <h4>the API generator</h4>
           <iframe class="github" src="https://ghbtns.com/github-btn.html?user=ramses-tech&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
@@ -78,21 +78,21 @@ $ curl http://localhost/api/monuments
     <div class="row">
       <div class="one-third column value">
         <img src="images/icon-rapid.gif" width="180">
-        <h2 class="value-name">Rapid API creation</h2>
-        <h5 class="value-heading">One text file to rule them all</h5>
-        <p class="value-description">Using <a href="http://raml.org/">RAML</a>, Ramses generates production-ready APIs. No code required. Generate frontend code, documentation and tests.</p>
+        <h2 class="value-name">Generate</h2>
+        <h5 class="value-heading">No more monkey work</h5>
+        <p class="value-description"><a href="http://raml.org/">RAML</a> defined APIs with zero boilerplate. Can also generate frontend code, documentation and tests.</p>
       </div>
       <div class="one-third column value">
-        <img src="images/logo-elastic.png" width="180">
-        <h2 class="value-name">Elasticsearch-powered</h2>
-        <h5 class="value-heading">Advanced querying</h5>
-        <p class="value-description"><a href="https://www.elastic.co/products/elasticsearch">Elasticsearch</a> query DSL for your endpoints. Aggregations, full-text search, ranges, sorting, limits, pagination and more.</p>
+        <img src="images/icon-search.png" width="180">
+        <h2 class="value-name">Search</h2>
+        <h5 class="value-heading">Powerful querying built in</h5>
+        <p class="value-description">Using <a href="https://www.elastic.co/products/elasticsearch">Elasticsearch</a> under the hood. Aggregations, ranges, sorting, limits, pagination and more available as URL parameters.</p>
       </div>
       <div class="one-third column value">
-        <img src="images/icon-security.jpg" width="180">
-        <h2 class="value-name">Fine-grained security</h2>
-        <h5 class="value-heading">Customizable authorization</h5>
-        <p class="value-description">Syncs with Postgres or Mongo as a single source of truth to ensure data safety. Multiple authentication schemes. Collection and object-level authorization.</p>
+        <img src="images/icon-mix.png" width="180">
+        <h2 class="value-name">Compose</h2>
+        <h5 class="value-heading">Designed for <a href="http://martinfowler.com/articles/microservices.html">microservices</a></h5>
+        <p class="value-description">Wrap existing APIs or create new ones. Compliments existing stacks. Custom webhooks and validation supported.</p>
       </div>
     </div>
   </div>
@@ -101,25 +101,25 @@ $ curl http://localhost/api/monuments
 <div class="section get-help">
   <div class="container">
     <h2 class="section-heading"><strong>Need help getting started?</strong></h2>
-    <h4 class="section-description">If you'd like a bit of guidance you can <a href="https://gitter.im/ramses-tech/ramses">chat with us on Gitter</a>, or <em>send an email to get private support</em>.</h4>
+    <h4 class="section-description"><a href="https://gitter.im/ramses-tech/ramses">Chat with us on Gitter</a>, or send an email for private support.</h4>
     <a class="button button-primary" href="mailto:hello@ramses.tech">get in touch</a>
   </div>
 </div>
 
 <div class="section advantages">
   <div class="container">
-    <h2 class="section-heading">Self-hosted</h2>
-    <p class="section-description">Don't outsource the bread and butter of your product to third-party backends that aren't under your control.</p>
+    <h2 class="section-heading">Self-control</h2>
+    <p class="section-description">Run on your infrastructure of choice.</p>
     <div class="row">
       <div class="one-half column advantge">
         <img src="images/icon-opensource.jpg" width="200"/>
         <h3>Open source</h3>
-        <p>It's Python all the way down. Dive into the internals if you want. The code is documented, unit tested, and commented. Licensed under Apache 2.0.</p>
+        <p>Easily readable internals. All code is documented, tested, and commented. Licensed under Apache 2.0.</p>
       </div>
       <div class="one-half column advantge">
         <img src="images/icon-extensible.png" height="135" style="border-radius:0;">
-        <h3>Extensible</h3>
-        <p>Add custom validators on fields, or business logic with CRUD hooks. Easily add databases or interact with other microservices.</p>
+        <h3>Customizable</h3>
+        <p>Easy things are easy. Hard things are easy too. Add any logic by extending, overriding, wrapping, or hacking as you see fit.</p>
       </div>
     </div>
   </div>
@@ -127,47 +127,47 @@ $ curl http://localhost/api/monuments
 
 <div class="section get-help team">
   <div class="container">
-    <h2 class="section-heading">Core Dev Team</h2>
-    <p class="section-description">We are seven so far and looking for more contributors.</p>
+    <h2 class="section-heading">Team</h2>
+    <p class="section-description">Ramses is made by and for developers</p>
     <div class="row">
-      <div class="four columns team">
-        <img src="https://avatars.githubusercontent.com/u/224078?v=3&s=400" width="200">
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/224078?v=3&s=400" width="120">
         <h5>Mat Allen</h5>
         <p>Vancouver, Canada</p>
       </div>
-      <div class="four columns team">
-        <img src="https://avatars.githubusercontent.com/u/461274?v=3&s=400" width="200">
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/461274?v=3&s=400" width="120">
         <h5>Chris Hart</h5>
         <p>Montreal, Canada</p>
       </div>
-      <div class="four columns team">
-        <img src="https://avatars.githubusercontent.com/u/1999863?v=3&s=400" width="200">
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/1999863?v=3&s=400" width="120">
         <h5>Artem Kostiuk</h5>
         <p>Bila Tserkva, Ukraine</p>
       </div>
-      <div class="four columns team">
-        <img src="https://avatars.githubusercontent.com/u/312702?v=3&s=400" width="200">
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/312702?v=3&s=400" width="120">
         <h5>Amos Latteier</h5>
         <p>Vancouver, Canada</p>
       </div>
-      <div class="four columns team">
-        <img src="https://avatars.githubusercontent.com/u/4790112?v=3&s=400" width="200">
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/4790112?v=3&s=400" width="120">
         <h5>Jan Mesarič</h5>
         <p>Ljubljana, Slovenia</p>
       </div>
-      <div class="four columns team">
-        <img src="https://avatars.githubusercontent.com/u/3224533?v=3&s=400" width="200">
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/3224533?v=3&s=400" width="120">
         <h5>Jaša Niklanovič</h5>
         <p>Ljubljana, Slovenia</p>
       </div>
-      <div class="four columns team">
-        <img src="https://avatars.githubusercontent.com/u/9660342?v=3&s=400" width="200">
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/9660342?v=3&s=400" width="120">
         <h5>Jonathan Stoikovitch</h5>
         <p>Montreal, Canada</p>
       </div>
-      <div class="four columns team">
-        <a href="https://gitter.im/ramses-tech/ramses"><img src="images/team-new.jpg" width="200"></a>
-        <h5>Next member?</h5>
+      <div class="three columns team">
+        <a href="https://gitter.im/ramses-tech/ramses"><img src="images/team-new.jpg" width="120"></a>
+        <h5><a href="mailto:hello@ramses.tech">Join Us</a></h5>
         <p>Anywhere, Universe</p>
       </div>
     </div>
@@ -178,13 +178,14 @@ $ curl http://localhost/api/monuments
   <div class="container">
     <div class="row">
       <h2 class="section-heading">Services</h2>
-      <p class="section-description">We love building new products. Let us take care of APIs so you can focus entirely on the UX for your customers.</p>
+      <p class="section-description">Support for your team</p>
       <ul class="nine columns offset-by-three services-list">
         <li>New APIs</li>
         <li>Integration of third party APIs</li>
         <li>Client libraries for any device</li>
         <li>Analytics dashboards</li>
-        <li>Support and training for developers and managers</li>
+        <li>Training</li>
+        <li>Customization, code review, core improvements</li>
       </ul>
     </div>
     <div class="row">
