minor change to services

--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@ $ curl http://localhost/api/monuments
 <div class="section services">
   <div class="container">
     <div class="row">
-      <h2 class="section-heading">Services</h2>
-      <p class="section-description">Support for your team</p>
+      <h2 class="section-heading">Commercial Support</h2>
+      <p class="section-description">Power-up your team</p>
       <ul class="nine columns offset-by-three services-list">
-        <li>New APIs</li>
+        <li>New API design and development</li>
         <li>Integration of third party APIs</li>
         <li>Client libraries for any device</li>
         <li>Analytics dashboards</li>
-        <li>Training</li>
+        <li>Training, documentation</li>
         <li>Customization, code review, core improvements</li>
       </ul>
     </div>
