--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <pre><code class="hero-code">
 $ curl http://localhost/api/monuments
 {[{
-  "name": "Abu Simbel"
+  "name": "Abu Simbel",
   "location": "Nubia",
   "dynasty": 19
 }]}
