team anchor move

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ $ curl http://localhost/api/monuments
   </div>
 </div>
 
-<div class="section get-help team"><a name="team"></a>
+<a name="team"></a>
+<div class="section get-help team">
   <div class="container">
     <h2 class="section-heading">Team</h2>
     <p class="section-description">Ramses is made by and for developers</p>
