--- a/index.html
+++ b/index.html
@@ -26,13 +26,31 @@
         <div class="twelve column ramses-avatar-container">
           <img src="images/ramses-avatar.jpg" class="ramses-avatar" width="300">
           <h1 class="hero-heading">Ramses</h1>
-          <h4>the API generator</h4>
+          <h4>the API generation framework</h4>
           <iframe class="github" src="https://ghbtns.com/github-btn.html?user=ramses-tech&repo=ramses&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
         </div>
       </div>
+      <div class="row section" style="margin-left:0;">
+          <pre><code class="hero-code" style="text-align:left;">
+                $ pip install ramses
+                $ pcreate -s ramses_starter myproj && cd myproj
+                $ pserve local.ini
+                serving on http://0.0.0.0:6543
+          </code></pre>
+      </div>
       <div class="row">
         <div class="ten columns offset-by-one hero-heading-container">
-          <h4>Turn a RAML file into a production-ready backend</h4>
+          <h4 style="text-align:left;margin-top:-2rem;">
+            ✔&nbsp; Automatically generate production-ready backends<br />
+            ✔&nbsp; With <a href="https://rawgit.com/raml2html/raml2html/master/examples/example.html">API docs</a><br />
+            ✔&nbsp; And <a href="https://github.com/mulesoft/raml-client-generator">JavaScript clients</a><br />
+            ✔&nbsp; Do <a href="https://nefertari.readthedocs.org/en/stable/making_requests.html">powerful queries</a> in the URL<br />
+            ✔&nbsp; Advanced auth and <a href="http://nefertari-guards.readthedocs.org/en/stable/acl_filtering.html">fine-grained ACLs</a><br />
+            ✔&nbsp; Use Postgres, MySQL, or MongoDB<br />
+            ✔&nbsp; Plug into <a href="https://www.elastic.co/products/kibana">ELK stack</a> to build analytics dashboards<br />
+            ✔&nbsp; Work with existing databases or APIs<br />
+        </h4>
+
           <h5>Step 1, describe an API:</h5>
           <pre><code class="hero-code">
 /monuments:
