--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
       <div class="row">
         <div class="ten columns offset-by-one hero-heading-container">
           <h4 style="text-align:left;margin-top:-2rem;">
-            ✔&nbsp; Automatically generate production-ready backends<br />
+            ✔&nbsp; Automatically generate APIs from <a href="http://raml.org/developers">RAML files</a><br />
             ✔&nbsp; With <a href="https://rawgit.com/raml2html/raml2html/master/examples/example.html">API docs</a><br />
             ✔&nbsp; And <a href="https://github.com/mulesoft/raml-client-generator">JavaScript clients</a><br />
             ✔&nbsp; Do <a href="https://nefertari.readthedocs.org/en/stable/making_requests.html">powerful queries</a> in the URL<br />
-            ✔&nbsp; Advanced auth and <a href="http://nefertari-guards.readthedocs.org/en/stable/acl_filtering.html">fine-grained ACLs</a><br />
+            ✔&nbsp; Advanced auth and <a href="https://nefertari-guards.readthedocs.org/en/stable/acl_filtering.html">fine-grained ACLs</a><br />
             ✔&nbsp; Use Postgres, MySQL, or MongoDB<br />
             ✔&nbsp; Plug into <a href="https://www.elastic.co/products/kibana">ELK stack</a> to build analytics dashboards<br />
             ✔&nbsp; Work with existing databases or APIs<br />
+            ✔&nbsp; Open source, Apache 2<br />
+            ✔&nbsp; Active community on <a href="https://github.com/ramses-tech">Github</a> and <a href="https://gitter.im/ramses-tech/ramses">Gitter</a><br />
+            ✔&nbsp; Commercial support from the core team (<a href="mailto:hello@ramses.tech">ask!</a>)
         </h4>
 
           <h5>Step 1, describe an API:</h5>
