--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <div class="ten columns offset-by-one hero-heading-container">
           <h5 style="text-align:left;margin-top:;color:white;margin-bottom:10rem;">
             ✓&nbsp; Generate APIs from <a href="http://raml.org/developers">RAML files</a><br />
-            ✓&nbsp; With <a href="https://rawgit.com/raml2html/raml2html/master/examples/example.html">API docs</a><br />
-            ✓&nbsp; And <a href="https://github.com/mulesoft/raml-client-generator">JavaScript clients</a><br />
-            ✓&nbsp; <a href="https://nefertari.readthedocs.org/en/stable/making_requests.html">Powerful queries</a> with <a href="https://www.elastic.co/blog/make-an-elasticsearch-powered-rest-api-for-any-data-with-ramses">Elasticsearch</a><br />
+            ✓&nbsp; With <a href="https://rawgit.com/raml2html/raml2html/master/examples/example.html">API docs</a> and <a href="https://github.com/ramses-tech/ra">tests</a><br />
+            ✓&nbsp; And <a href="https://github.com/mulesoft/raml-client-generator">client libraries</a><br />
+            ✓&nbsp; <a href="https://nefertari.readthedocs.org/en/stable/making_requests.html">Powerful querying</a> with <a href="https://www.elastic.co/blog/make-an-elasticsearch-powered-rest-api-for-any-data-with-ramses">Elasticsearch</a><br />
             ✓&nbsp; Advanced auth and <a href="https://nefertari-guards.readthedocs.org/en/stable/acl_filtering.html">fine-grained ACLs</a>
         </h5>
 
