shifting team members around. updating (c)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="ten columns offset-by-one hero-heading-container">
           <h5 style="text-align:left;margin-top:;color:white;margin-bottom:10rem;">
-            ✓&nbsp; Generate APIs from <a href="http://raml.org/developers">RAML files</a><br />
+            ✓&nbsp; Generate APIs from <a href="http://raml.org">RAML files</a><br />
             ✓&nbsp; With <a href="https://rawgit.com/raml2html/raml2html/master/examples/example.html">API docs</a> and <a href="https://github.com/ramses-tech/ra">tests</a><br />
             ✓&nbsp; And <a href="https://github.com/mulesoft/raml-client-generator">client libraries</a><br />
             ✓&nbsp; <a href="https://nefertari.readthedocs.org/en/stable/making_requests.html">Powerful querying</a> with <a href="https://www.elastic.co/blog/make-an-elasticsearch-powered-rest-api-for-any-data-with-ramses">Elasticsearch</a><br />
@@ -139,44 +139,44 @@ $ curl http://localhost/api/monuments
     <p class="section-description">Ramses is made by and for developers</p>
     <div class="row">
       <div class="three columns team">
-        <img src="https://avatars.githubusercontent.com/u/224078?v=3&s=400" width="120">
-        <h5>Mat Allen</h5>
-        <p>Vancouver, Canada</p>
+        <img src="https://avatars.githubusercontent.com/u/9660342?v=3&s=400" width="120">
+        <h5>Jonathan Stoikovitch</h5>
+        <!-- <p>Montreal, Canada</p> -->
       </div>
       <div class="three columns team">
         <img src="https://avatars.githubusercontent.com/u/461274?v=3&s=400" width="120">
         <h5>Chris Hart</h5>
-        <p>Montreal, Canada</p>
+        <!-- <p>Montreal, Canada</p> -->
       </div>
       <div class="three columns team">
         <img src="https://avatars.githubusercontent.com/u/1999863?v=3&s=400" width="120">
         <h5>Artem Kostiuk</h5>
-        <p>Bila Tserkva, Ukraine</p>
+        <!-- <p>Bila Tserkva, Ukraine</p> -->
       </div>
       <div class="three columns team">
         <img src="https://avatars.githubusercontent.com/u/312702?v=3&s=400" width="120">
         <h5>Amos Latteier</h5>
-        <p>Vancouver, Canada</p>
+        <!-- <p>Vancouver, Canada</p> -->
+      </div>
+      <div class="three columns team">
+        <img src="https://avatars.githubusercontent.com/u/224078?v=3&s=400" width="120">
+        <h5>Mat Allen</h5>
+        <!-- <p>Vancouver, Canada</p> -->
       </div>
       <div class="three columns team">
         <img src="https://avatars.githubusercontent.com/u/4790112?v=3&s=400" width="120">
         <h5>Jan Mesarič</h5>
-        <p>Ljubljana, Slovenia</p>
+        <!-- <p>Ljubljana, Slovenia</p> -->
       </div>
       <div class="three columns team">
         <img src="https://avatars.githubusercontent.com/u/3224533?v=3&s=400" width="120">
         <h5>Jaša Niklanovič</h5>
-        <p>Ljubljana, Slovenia</p>
-      </div>
-      <div class="three columns team">
-        <img src="https://avatars.githubusercontent.com/u/9660342?v=3&s=400" width="120">
-        <h5>Jonathan Stoikovitch</h5>
-        <p>Montreal, Canada</p>
+        <!-- <p>Ljubljana, Slovenia</p> -->
       </div>
       <div class="three columns team">
         <a href="https://gitter.im/ramses-tech/ramses"><img src="images/team-new.jpg" width="120"></a>
         <h5><a href="mailto:hello@ramses.tech">Join Us</a></h5>
-        <p>Anywhere, Universe</p>
+        <!-- <p>Anywhere, Universe</p> -->
       </div>
     </div>
   </div>
@@ -206,7 +206,7 @@ $ curl http://localhost/api/monuments
 
 <div class="section footer">
   <div class="container">
-    <p>&nbsp; &copy; Sosign Interactive Inc.</p>
+    <p>&nbsp; &copy; Ramses Tech, Inc.</p>
   </div>
 </div>
 
